package pt.isep.desofs.vendnet.domain.model.machine;

public enum MachineStatus {
	ONLINE,
	OFFLINE,
	MAINTENANCE,
	DECOMMISSIONED
}
