package pt.isep.desofs.vendnet.domain.model.user;

public enum AccountStatus {
    ACTIVE,
    LOCKED,
    SUSPENDED
}
