package pt.isep.desofs.vendnet.domain.model.user;

public enum Role {
    ROLE_USER,
    ROLE_ADMIN
}
